[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/game_over_PNG57.png" type="Texture" id=2]
[ext_resource path="res://assets/penetration.png" type="Texture" id=3]
[ext_resource path="res://assets/MachineGun.png" type="Texture" id=4]
[ext_resource path="res://assets/lazer.png" type="Texture" id=5]
[ext_resource path="res://assets/M7fDTpDnJcZ4dt3myngzxi.jpg" type="Texture" id=6]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Exit" type="Button" parent="."]
margin_left = 485.0
margin_top = 1.0
margin_right = 538.0
margin_bottom = 21.0
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -56.5
margin_right = 56.5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 113.0
margin_bottom = 14.0

[node name="Game" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 38.0
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 113.0
margin_bottom = 62.0
text = "Options"

[node name="Instructions" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 113.0
margin_bottom = 86.0
text = "Instructions"

[node name="SPEED" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 113.0
margin_bottom = 110.0
text = "ADD SPEED"

[node name="ARMOR" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 113.0
margin_bottom = 110.0
text = "ADD ARMOR"

[node name="AMMO" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 113.0
margin_bottom = 110.0
text = "ADD AMMO"

[node name="RATE" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 90.0
margin_right = 113.0
margin_bottom = 110.0
text = "ADD FIRE RATE"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Level" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 38.0
margin_bottom = 27.0
text = "Level:"

[node name="Number" type="Label" parent="HBoxContainer"]
margin_left = 42.0
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0
text = "0"

[node name="GameOverPng57" type="Sprite" parent="."]
visible = false
position = Vector2( 267, 272 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 2.0
margin_top = 126.0
margin_right = 542.0
margin_bottom = 584.0

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 410.0
margin_bottom = 14.0
text = "Choose a Power Up!:"

[node name="lazer" type="TextureButton" parent="GridContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 18.0
margin_right = 410.0
margin_bottom = 218.0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="GridContainer/lazer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Aim Laser"

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 222.0
margin_right = 410.0
margin_bottom = 236.0
text = "Bullet deals doublle normal damage and has perfect aim"

[node name="MG" type="TextureButton" parent="GridContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 240.0
margin_right = 410.0
margin_bottom = 440.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="GridContainer/MG"]
margin_right = 40.0
margin_bottom = 14.0
text = "Machine Gun"

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 444.0
margin_right = 410.0
margin_bottom = 458.0
text = "This gun has double fire rate and infinite ammo but no precision"

[node name="penetration" type="TextureButton" parent="GridContainer"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 462.0
margin_right = 410.0
margin_bottom = 662.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="GridContainer/penetration"]
margin_right = 40.0
margin_bottom = 14.0
text = "Bullet Penetration"

[node name="Label4" type="Label" parent="GridContainer"]
margin_top = 666.0
margin_right = 410.0
margin_bottom = 680.0
text = "Bullet damages multiple enemies in his path"

[node name="GridContainer2" type="GridContainer" parent="."]
visible = false
margin_left = 2.0
margin_top = 126.0
margin_right = 542.0
margin_bottom = 584.0

[node name="Label5" type="Label" parent="GridContainer2"]
margin_right = 64.0
margin_bottom = 14.0
text = "STATS:"

[node name="Label" type="Label" parent="GridContainer2"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 32.0
text = "SPEED: 0"

[node name="Label2" type="Label" parent="GridContainer2"]
margin_top = 36.0
margin_right = 64.0
margin_bottom = 50.0
text = "ARMOR: 0"

[node name="Label3" type="Label" parent="GridContainer2"]
margin_top = 54.0
margin_right = 64.0
margin_bottom = 68.0
text = "AMMO: 0"

[node name="Label4" type="Label" parent="GridContainer2"]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 86.0
text = "RATE: 0"

[node name="M7fDtpDnJcZ4Dt3Myngzxi" type="Sprite" parent="."]
modulate = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
show_behind_parent = true
position = Vector2( 270, 475 )
rotation = 1.5708
scale = Vector2( 0.41, 0.41 )
texture = ExtResource( 6 )

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/SPEED" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ARMOR" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/AMMO" to="." method="_on_AMMO_pressed"]
[connection signal="pressed" from="VBoxContainer/RATE" to="." method="_on_RATE_pressed"]
[connection signal="pressed" from="GridContainer/lazer" to="." method="lazer"]
[connection signal="pressed" from="GridContainer/MG" to="." method="_on_MG_pressed"]
[connection signal="pressed" from="GridContainer/penetration" to="." method="_on_penetration_pressed"]
